--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Environment variables
+.env*
 .env
-.env.local
-.env.production
-.env.staging
 
 # Logs
 *.log
@@ -46,6 +44,9 @@ sessions/
 # Uploads
 uploads/
 public/uploads/
+
+# Apache config files
+**/.htaccess
 
 # Backup files
 *.bak
